<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_light"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="255dp"
        android:layout_height="224dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="235dp"
            android:layout_height="214dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Agrega fecha de busqueda"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_mostrar_fecha_picker"
                    android:layout_width="178dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/formato_fecha"
                    android:inputType="date"
                    android:text="Fecha"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <ImageButton
                    android:id="@+id/ib_obtener_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/boton_redondo"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_today_black_24dp"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/id_cerrar"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_redondo"
                    android:text="Cerrar" />

                <Button
                    android:id="@+id/agregar"
                    android:layout_width="116dp"
                    android:background="@drawable/boton_redondo"
                    android:layout_height="wrap_content"
                    android:text="Listo" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>