...
            android:layout_marginStart="-97dp"
            android:layout_marginLeft="-97dp"
            android:gravity="center"
            android:hint="Buscar"></EditText>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp">

            <ListView
                android:id="@+id/listView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <ProgressBar
...
