<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lnr1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/grad"
    android:paddingTop="105dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="196dp" />

    <Button
        android:id="@+id/cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancelar reserva"
        android:background="@drawable/boton_redondo"/>

    <ListView
        android:id="@+id/listado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:headerDividersEnabled="true"
        android:isScrollContainer="true"
        android:nestedScrollingEnabled="true"
        android:clickable="true">


    </ListView>

</LinearLayout>